k8s/base/web-map/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-map
  namespace: parktrack
spec:
  selector:
    app: web-map
  ports:
  - port: 80
    targetPort: 80
    name: http
