k8s/base/web-map/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-map-route
  namespace: parktrack
spec:
  parentRefs:
  - name: parktrack-gateway
  hostnames:
  - "parktrack.live"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: web-map
      port: 80
